--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "map-image-preview",
   "version": "1.0.0",
-  "description": "",
+  "description": "Render static raster preview images of maps",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
