--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "canvas": "^2.5.0",
+    "minimist": "^1.2.0",
     "tinycolor2": "^1.4.1"
   },
   "publishConfig": {
