--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "map-image-preview",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Render static raster preview images of maps",
-  "main": "index.js",
+  "main": "map-image-preview.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "map-image-preview": "./index.js"
+    "map-image-preview": "./map-image-preview.js"
   },
   "keywords": [
     "rasterize",
