--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/index.js"
+      "program": "${workspaceFolder}/map-image-preview.js",
+      "args": ["-M", "metadata.json", "polygon.32633.geojson"]
     }
   ]
 }
