--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "request": "launch",
       "name": "Launch Program",
       "program": "${workspaceFolder}/map-image-preview.js",
-      "args": ["-M", "metadata.json", "polygon.32633.geojson"]
+      "args": ["-C", "'#f33'", "polygon.32633.geojson"],
+      "args2": ["-C", "'#f33'", "-M", "metadata.json", "polygon.32633.geojson"]
     }
   ]
 }
