Update with --maxbounds setting

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,14 @@
       "request": "launch",
       "name": "Launch Program",
       "program": "${workspaceFolder}/map-image-preview.js",
-      "args": ["-F", "#f00", "-S", "#00f", "polygon.32633.geojson"],
+      "args": [
+        "-F",
+        "#f00",
+        "-X",
+        "{\"left\":1, \"right\":2, \"bottom\":3, \"top\":5}",
+        "polygon.32633.geojson"
+      ],
+      "args3": ["-F", "#f00", "-S", "#00f", "polygon.32633.geojson"],
       "args2": ["-C", "#f33", "-M", "metadata.json", "polygon.32633.geojson"]
     }
   ]
